# driftguard-ray

./: .gitignore  .rayignore  README.md  pyproject.toml
datasets/drift_domain_net/: _meta.json
datasets/pacs/: _meta.json
src/driftguard_ray/: __init__.py  cli.py  config.py  exp.py  recorder.py
src/driftguard_ray/data/: README.md  __init__.py  domain_dataset.py  drift_simulation.py  service.py
src/driftguard_ray/federate/: observation.py  params.py  retrain_config.py
src/driftguard_ray/federate/client/: client.py
src/driftguard_ray/federate/server/: cluster.py  fed_server.py  retrain_strategy.py  state.py  sync.py
src/driftguard_ray/model/: dataset.py  moe.py  utils.py  vit.py
src/driftguard_ray/model/c_resnet/: model.py
src/driftguard_ray/model/c_vit/: activation.py  model.py
src/driftguard_ray/model/training/: __init__.py  trainer.py
src/driftguard_ray/protocol/: __init__.py  types.py
src/driftguard_ray/rpc/: proxy.py  rpc.py
src/driftguard_ray/runtime/: __init__.py  interfaces.py
src/driftguard_ray/runtime/ray/: __init__.py  actors.py  launcher.py
tests/: try.py
