[project]
name = "driftguard-ray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yzh", email = "yzh.han@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "ray[default]>=2.53.0",
    "scikit-learn>=1.8.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.scripts]
driftguard-ray = "driftguard_ray:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "gdown>=5.2.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
